fixed extra space on right

--- a/styles.css
+++ b/styles.css
@@ -124,7 +124,7 @@ body{
 }
 .about-paragraph{
 	font-size: 23px;
-	padding-left: 100px;
+	padding-left: 40px;
 	padding-top: 50px;
 }
 /*.car-it{
